--- a/Parallax/parallax.css
+++ b/Parallax/parallax.css
@@ -1,20 +1,12 @@
-/* Parallax */
-/* parent */
-.block {
+.parent {
+  clip-path: inset(0);
+}
+
+.child {
+  position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  position: relative;
-  overflow: hidden;
-  z-index: 2;
-}
-.img-parallax {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translate(-50%, 0);
-  pointer-events: none;
   object-fit: cover;
-  display: block;
-  max-width: 100%;
 }
